--- a/static/css/style.css
+++ b/static/css/style.css
@@ -97,7 +97,10 @@ body .wrapper {
 }
 
 section {
-    min-height: 93vh !important;
+    /* min-height: 93vh !important; */
+    min-height: 100%;
+    padding-top: 3%;
+    padding-bottom: 3%;
 }
 
 #section4 {
