--- a/static/css/style.css
+++ b/static/css/style.css
@@ -952,7 +952,8 @@ ul {
     -webkit-transition: 0.4s;
     transition: 0.4s;
     box-shadow: 0 0px 15px #2020203d;
-    background: white url('https://i.ibb.co/FxzBYR9/night.png');
+    /* background: white url('https://i.ibb.co/FxzBYR9/night.png'); */
+    background: white url('../img/night.png');
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -969,7 +970,7 @@ input:checked+.slider:before {
     -webkit-transform: translateX(24px);
     -ms-transform: translateX(24px);
     transform: translateX(24px);
-    background: white url('https://i.ibb.co/7JfqXxB/sunny.png');
+    background: white url('../img/sunny.png');
     background-repeat: no-repeat;
     background-position: center;
 }
